# saiki-polymarket-trader

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  polymarket-backtesting-complete-guide.md
.claude/: settings.local.json
.claude/commands/: add-feature.md  add-strategy.md  debug-trading.md  (+2 more)
backend/: Makefile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20251225_134500_001_add_backtesting_models.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/routes/: arbitrage.py  backtesting.py  bots.py  markets.py  traders.py  trading.py
backend/app/bots/: __init__.py  base.py  executor.py  manager.py
backend/app/models/: __init__.py  backtest.py  backtest_run.py  base.py  market.py  position.py  price_history.py  strategy.py  tracked_trader.py  trade.py  trade_history.py  trader.py
backend/app/scripts/: __init__.py  backfill_data.py  collect_prices.py  sync_markets.py
backend/app/services/: data_collector.py
backend/app/services/backtesting/: __init__.py  data_replay.py  engine.py  metrics.py
backend/app/services/polymarket/: __init__.py  client.py  gamma.py  websocket.py
backend/app/strategies/: __init__.py  base.py  binary_complement_arbitrage.py  catalyst_momentum.py  correlation_hedging.py  cross_platform_arbitrage.py  favorite_compounder.py  multi_outcome_bundle_arbitrage.py  no_bias_exploit.py  settlement_edge.py  term_structure_spreads.py  whale_copy_trading.py
backend/app/strategies/arbitrage/: __init__.py
backend/app/strategies/mean_reversion/: __init__.py
backend/app/strategies/momentum/: __init__.py
backend/app/tasks/: __init__.py  backtesting.py  bot_execution.py  market_sync.py  trader_tracking.py
backend/tests/: __init__.py  conftest.py
frontend/: package-lock.json  package.json
(+24 files in other folders)
